2024-01-20T16:20:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7595496784 # 41
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 139 230
* notice: prev accum: outdated-unq outdated-all / unq all: 2335 6291 / 2507 6518
* notice: next accum: outdated-unq outdated-all / unq all: 2335 6291 / 2508 6521
* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +3 +6 -0 -0 / 3 6
* notice: removed / changed dates: [] / [2024-01-20]

2024-01-20T08:19:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7593207518 # 40
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 138 227
* notice: prev accum: outdated-unq outdated-all / unq all: 2327 6282 / 2505 6515
* notice: next accum: outdated-unq outdated-all / unq all: 2335 6291 / 2507 6518
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [2024-01-06] / [2024-01-20]

2024-01-20T01:12:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7591102769 # 39
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-20
* notice: last 14d: unq all: 144 233
* notice: prev accum: outdated-unq outdated-all / unq all: 2317 6271 / 2504 6513
* notice: next accum: outdated-unq outdated-all / unq all: 2327 6282 / 2505 6515
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +18 +26 -0 -0 / 18 26
* notice: removed / changed dates: [2024-01-05] / [2024-01-19]

2024-01-19T16:21:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7586401040 # 38