@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-20T16:20:04Z",
+  "timestamp" : "2024-01-21T08:19:39Z",
   "count_outdated" : 6291,
   "uniques_outdated" : 2335,
-  "count" : 6521,
-  "uniques" : 2508,
+  "count" : 6522,
+  "uniques" : 2509,
   "clones" : [
     {
       "timestamp": "2024-01-07T00:00:00Z",
@@ -130,6 +130,15 @@
       "uniques": 3,
       "uniques_minmax": [ 2, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-01-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
