@@ -1,5 +1,5 @@
 {
-  "count": 230,
+  "count": 231,
   "uniques": 139,
   "clones": [
     {
@@ -71,6 +71,11 @@
       "timestamp": "2024-01-20T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-01-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
